--- a/README
+++ b/README
@@ -42,6 +42,8 @@ Password checks
  - password checking can optionally be set to ensure that no more than a given
    number of characters from a character set can be used in a row.
 
+ - password can be checked whether it contains the username (sn)
+
 INSTALLATION
 ------------
 Use the provided Makefile to build the module.
