fix typo in title

--- a/ppolicy-check-password.5
+++ b/ppolicy-check-password.5
@@ -14,13 +14,13 @@
 .\" * GNU General Public License for more details.
 .\" */
 .\"
-.TH PPOLICY-PASSWORD-CHECK 5 "2016/02/18" "OpenLDAP password quality check"
+.TH PPOLICY-CHECK-PASSWORD 5 "2016/02/18" "OpenLDAP password quality check"
 .SH NAME
-ppolicy\-password\-check \- Password quality checker for OpenLDAP ppolicy overlay
+ppolicy\-check\-password \- Password quality checker for OpenLDAP ppolicy overlay
 .SH SYNOPSIS
 pwdCheckModule ppolicy-check-password.so
 .SH DESCRIPTION
-ppolicy\-password\-check is an implementation of password quality check module, it can be plugged into OpenLDAP
+ppolicy\-check\-password is an implementation of password quality check module, it can be plugged into OpenLDAP
 .BR slapo\-ppolicy (5)
 overlay to enforce organisational password strength policies for password-change operations.
 
